RESOLVED FIXED278253
[Navigation] Fix key-id-location-replace-cross-origin.html
https://bugs.webkit.org/show_bug.cgi?id=278253
Summary [Navigation] Fix key-id-location-replace-cross-origin.html
Rob Buis
Reported 2024-08-16 13:45:08 PDT
Fix key-id-location-replace-cross-origin.html.
Attachments
Rob Buis
Comment 1 2024-08-16 13:52:06 PDT
Radar WebKit Bug Importer
Comment 2 2024-08-23 13:46:11 PDT
EWS
Comment 3 2024-10-12 11:49:42 PDT
Committed 285078@main (f382ec34d071): <https://commits.webkit.org/285078@main> Reviewed commits have been landed. Closing PR #32319 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.