[Navigation] Fix unstable UUIDs in failing WPT tests https://bugs.webkit.org/show_bug.cgi?id=278253

Reviewed by Alex Christensen and Darin Adler.

In order to fix the unstable UUIDs in failing WPT tests various improvements of handling NavigationHistoryEntry.key are done
- same document navigation history items keep their navigation API key
- cross document navigations that are same origin keep their navigation API keys (1)
- we rely on the navigation API at the time the NavigationHistoryEntry was created and do not fall back to the associated
  history item.

[1] https://html.spec.whatwg.org/multipage/browsing-the-web.html#finalize-a-cross-document-navigation (Step 9.3)

* LayoutTests/TestExpectations:
* LayoutTests/imported/w3c/web-platform-tests/navigation-api/navigation-activation/activation-replace-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/navigation-api/navigation-history-entry/entries-after-srcdoc-navigation-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/navigation-api/navigation-history-entry/key-id-location-replace-cross-origin-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/navigation-api/navigation-methods/navigate-replace-same-document-expected.txt:
* LayoutTests/platform/ios/TestExpectations:
* LayoutTests/platform/mac/TestExpectations:
* Source/WebCore/history/HistoryItem.cpp:
(WebCore::HistoryItem::reset):
* Source/WebCore/history/HistoryItem.h:
(WebCore::HistoryItem::setUUIDIdentifier):
* Source/WebCore/loader/FrameLoader.cpp:
(WebCore::FrameLoader::loadInSameDocument):
* Source/WebCore/loader/HistoryController.cpp:
(WebCore::HistoryController::updateCurrentItem):
* Source/WebCore/page/Navigation.cpp:
(WebCore::Navigation::initializeForNewWindow):
* Source/WebCore/page/NavigationHistoryEntry.cpp:
(WebCore::NavigationHistoryEntry::NavigationHistoryEntry):
(WebCore::NavigationHistoryEntry::create):
(WebCore::NavigationHistoryEntry::key const):
* Source/WebCore/page/NavigationHistoryEntry.h:

Canonical link: https://commits.webkit.org/285078@main