Source/WebCore/loader/HistoryController.cpp
@@ -906,8 +906,12 @@ void HistoryController::updateCurrentItem()
         // property of how this HistoryItem was originally created and is not
         // dependent on the document.
         bool isTargetItem = currentItem->isTargetItem();
+        auto uuidIdentifier = currentItem->uuidIdentifier();
+        bool sameOrigin = SecurityOrigin::create(currentItem->url())->isSameOriginAs(SecurityOrigin::create(documentLoader->url()));
         currentItem->reset();
         initializeItem(*currentItem, documentLoader);
+        if (sameOrigin)
+            currentItem->setUUIDIdentifier(uuidIdentifier);
         currentItem->setIsTargetItem(isTargetItem);
     } else {
         // Even if the final URL didn't change, the form data may have changed.
